--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   font-family: "dream-avenue";
   overflow-x: hidden;
+  scroll-behavior: smooth !important;
 }
 
 .location-svg {
