--- a/css/section2.css
+++ b/css/section2.css
@@ -1,4 +1,3 @@
-/* Elegante animatie voor het in beeld komen van de sectie */
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -154,4 +153,14 @@
 .slideshow img.active {
   opacity: 1;
   z-index: 1;
+}
+
+@media (max-width: 768px) {
+  .content-left {
+    display: none;
+  }
+
+  .section-two-container h2 {
+    margin-bottom: 10vh !important;
+  }
 }
