--- a/css/section3.css
+++ b/css/section3.css
@@ -1,50 +1,67 @@
 .section-three {
-  background-color: #484036; /* Luxe, neutrale kleur voor de achtergrond */
+  background-color: #484036;
   display: flex;
-  justify-content: center; /* Centreer de inhoud horizontaal */
-  align-items: center; /* Centreer de inhoud verticaal */
+  justify-content: center;
+  align-items: center;
   height: auto;
   padding-bottom: 5vh;
 }
 
 .prijslijst-container {
-  text-align: center; /* Centreer de tekst in de container */
-  max-width: 800px; /* Zet een maximale breedte voor de lijst */
-  width: 100%; /* Zorg ervoor dat het container de volledige breedte benut */
+  text-align: center;
+  max-width: 800px;
+  width: 100%;
 }
 
 .prijslijst-left {
   font-weight: 600;
-  color: #dfdfdf; /* Diepe grijze kleur voor luxe */
-  margin-bottom: 50px; /* Vergrote ruimte onder de titel voor meer afstand */
-  letter-spacing: 2px; /* Vergroot de ruimte tussen de letters voor een chique effect */
+  color: #dfdfdf;
+  margin-bottom: 50px;
+  letter-spacing: 2px;
   font-family: "dream-avenue";
 }
 
 .price-list {
-  font-size: 20px; /* Grotere tekst voor de prijslijst */
-  color: #cfcece; /* Grijze kleur voor de tekst */
+  font-size: 20px;
+  color: #cfcece;
   list-style-type: none;
   padding: 0;
   margin: 0;
-  text-align: left; /* Lijstitems links uitlijnen */
+  text-align: left;
 }
 
 .price-list li {
-  margin: 15px 0; /* Ruimte tussen de lijstitems */
-  font-weight: 500; /* Maak de tekst dikker voor een elegantere uitstraling */
-  padding-bottom: 10px; /* Extra ruimte onder de items */
+  margin: 15px 0;
+  font-weight: 500;
+  padding-bottom: 10px;
   display: flex;
-  justify-content: space-between; /* Zorg dat de tekst en prijzen op één lijn staan */
+  justify-content: space-between;
 }
 
 .price-list li span {
   display: inline-block;
-  width: 50%; /* Zorg ervoor dat de tekst en prijs netjes op één lijn staan */
-  text-align: left; /* Zet de tekst links uitgelijnd */
+  width: 50%;
+  text-align: left;
 }
 
 .price-list li .price {
-  text-align: right; /* Zet de prijs rechts uitgelijnd */
-  width: 30%; /* Zorg ervoor dat de prijs niet te ver naar rechts staat */
+  text-align: right;
+  width: 30%;
+}
+
+@media (max-width: 768px) {
+  .price-list li .treatment {
+    width: 70%;
+    padding-left: 2vw;
+  }
+
+  .price-list li .price {
+    width: 30%;
+    padding-right: 2vw;
+  }
+
+  .prijslijst-container {
+    padding-top: 10vh;
+    padding-bottom: 15vh;
+  }
 }
